[package]
name = "tannius-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = "0.4"
chrono-tz = "0.8"
